# AirgappedAgent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.airgap.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml
docs/: HARNESS.md  SECURE_STARTUP.md  THREAT_MODEL.md
eval/fixtures/: security.yaml
policies/: default.yaml  write-enabled.example.yaml
scripts/: build-wheelhouse.sh  bundle-models.sh  offline-install.sh  run-airgapped.sh  run_ci_local.py  sign-bundle.sh  verify-bundle.sh
src/airgap_agent/: __init__.py  canaries.py  cli.py  config.py
src/airgap_agent/agent/: __init__.py  eval.py  harness.py  metrics.py  prompts.py  schemas.py  session.py  tool_gate.py  tools.py
src/airgap_agent/crypto/: __init__.py  chain.py  encrypt.py  keys.py  sign.py
src/airgap_agent/deployment/: __init__.py  bootstrap.py  bundle.py  health.py  hf.py
src/airgap_agent/inference/: __init__.py  base.py  chat_format.py  factory.py  llama_cpp.py  mock.py  openai_compat.py
src/airgap_agent/security/: __init__.py  audit.py  capabilities.py  capability_tokens.py  errors.py  paths.py  policy.py  replay_cache.py  sandbox.py
tests/: test_bootstrap.py  test_bootstrap_api.py  test_bootstrap_strict_python.py  test_budgets.py  test_bundle.py  test_capability_tokens.py  test_chat_format.py  test_config.py  test_crypto.py  test_eval.py  test_harness.py  test_harness_budgets.py  test_harness_circuit_breaker.py  test_harness_history.py  test_openai_compat.py  test_policy.py  test_replay_cache.py  test_sandbox.py  test_serve_api.py  test_session.py  test_session_sanitize.py  test_tool_gate.py  test_write_file.py
