[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airgap-agent"
version = "0.1.0"
description = "Airgapped, secure-by-default deployment and inference harness for agentic AI with open-source models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Airgap Agent Contributors" }]
keywords = ["ai", "agents", "airgap", "security", "llm", "offline"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "cryptography>=46.0.6,<48",
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "pyyaml>=6.0,<7",
  "structlog>=24.1,<26",
  "typer>=0.12,<1",
  "rich>=13.7,<14",
]

[project.optional-dependencies]
llama = ["llama-cpp-python>=0.2.90,<1"]
hf = ["huggingface_hub>=0.24,<1"]
dev = ["pytest>=9.0.3,<10", "pytest-asyncio>=0.23,<1", "ruff>=0.4,<1"]

[project.scripts]
airgap-agent = "airgap_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
