[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airgap-agent"
version = "0.1.0"
description = "Airgapped, secure-by-default deployment and inference harness for agentic AI with open-source models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Airgap Agent Contributors" }]
keywords = ["ai", "agents", "airgap", "security", "llm", "offline"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "cryptography>=46.0.6,<49",
  "httpx>=0.28,<1",
  "pydantic>=2.13,<3",
  "pydantic-settings>=2.14,<3",
  "pyyaml>=6.0,<7",
  "structlog>=26.1,<27",
  "typer>=0.26,<1",
  "rich>=15.0,<16",
]

[project.optional-dependencies]
llama = ["llama-cpp-python>=0.3.28,<1"]
hf = ["huggingface_hub>=1.18,<2"]
dev = ["pytest>=9.0.3,<10", "pytest-asyncio>=1.4,<2", "ruff>=0.15,<1"]

[project.scripts]
airgap-agent = "airgap_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/airgap_agent/cli.py" = ["B008"]
